# Search-and-Rescue-UAV

./: .gitignore  ADVANCED_FEATURES.md  ALGORITHM_ACTION_SPACE_GUIDE.md  COLORBAR_STACKING_FIX.md  README.md  VISUALIZATION_FIX.md  fix_glitching_demo.py  pyproject.toml  render.py  requirements.txt  test_colorbar_fix.py  test_viz.py  visualize_model.py
agents/: __init__.py  baselines.py  rl_agent.py
deployment/: __init__.py  deploy_sar_agent.py  drone_interface.py
envs/: __init__.py  config.py  multi_agent_sar_env.py  pybullet_sar_env.py  sar_env.py  sar_env_3d.py  sar_env_smooth.py
evaluation/: __init__.py  evaluate.py  run_dashboard.py
examples/: example_3d_env.py  example_deployment.py  example_multi_agent.py  example_pybullet_env.py  visualize_simulation.py
experiments/configs/: ppo_10x10.yaml  sac_10x10.yaml  sac_30x30.yaml
source/: pyvenv.cfg
source/Scripts/: activate  activate.bat
tests/: test_environment.py
training/: __init__.py  callbacks.py  train.py  train_pybullet.py
